# splendor

./: .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  petri.cpp  petri.h  splendor.cpp  splendor.h  tests.cpp  ui.cpp  ui.h
assets/: config.json
assets/test/: custom_config.json
src/: petri.cpp  splendor.cpp  splendor.h  ui.cpp  ui.h
src/test/: CMakeLists.txt  tests.cpp
tools/: nlohmann-json.py
